fix: corrected z-index for close button icon

--- a/source/php/Module/InteractiveMap/assets/interactive-map.scss
+++ b/source/php/Module/InteractiveMap/assets/interactive-map.scss
@@ -29,6 +29,7 @@ $color-secondary-contrasting: var(--color-secondary-contrasting, #fff) !default;
     top: 1rem;
     right: 1rem;
     cursor: pointer;
+    z-index: 1000;
 }
 
 .interactive-map__filters-container {
